<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3CB371"
            android:clickable="false"
            android:focusable="false"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:text="@string/topic"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/selector_back"
            android:clickable="true"
            android:focusable="true"
            android:paddingBottom="15dp"
            android:paddingLeft="30dp"
            android:paddingTop="15dp"
            android:text="@string/back"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_choose_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
        android:text="@string/request_info"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/corners_bg_info"
        android:padding="2dp" >

        <TextView
            android:id="@+id/tv_apply_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/apply_person"
            android:textColor="#54b9f9"
            android:textSize="15sp" />

        <View
            android:id="@+id/view_apply_person"
            android:layout_width="1px"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="80dp"
            android:background="@color/color_aaaaaa" />

        <EditText
            android:id="@+id/et_apply_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/view_apply_person"
            android:background="@drawable/corners_bg_edittext"
            android:hint="@string/hint"
            android:maxLength="20"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_choose_one"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/corners_bg_info"
        android:padding="2dp" >

        <TextView
            android:id="@+id/tv_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/public_num"
            android:textColor="#54b9f9"
            android:textSize="15sp" />

        <View
            android:id="@+id/view_data"
            android:layout_width="1px"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="80dp"
            android:background="@color/color_aaaaaa" />

        <EditText
            android:id="@+id/et_request_public_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/view_data"
            android:background="@drawable/corners_bg_edittext"
            android:hint="@string/hint"
            android:maxLength="20"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_choose_one"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/corners_bg_info"
        android:padding="2dp" >

        <TextView
            android:id="@+id/tv_patent_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/patent_number"
            android:textColor="#54b9f9"
            android:textSize="15sp" />

        <View
            android:id="@+id/view_patent_num"
            android:layout_width="1px"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="80dp"
            android:background="@color/color_aaaaaa" />

        <EditText
            android:id="@+id/et_request_patent_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/view_patent_num"
            android:background="@drawable/corners_bg_edittext"
            android:hint="@string/hint"
            android:maxLength="20"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_choose_one"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/corners_bg_info"
        android:padding="2dp" >

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/product_name"
            android:textColor="#54b9f9"
            android:textSize="15sp" />

        <View
            android:id="@+id/view_name"
            android:layout_width="1px"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="80dp"
            android:background="@color/color_aaaaaa" />

        <EditText
            android:id="@+id/et_request_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/view_name"
            android:background="@drawable/corners_bg_edittext"
            android:hint="@string/hint"
            android:maxLength="20"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textSize="15sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/bt_start_request"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="right"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_title_bar_button"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/start_request"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_path"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
        android:text="@string/compare_result"
        android:textSize="20sp" />

    <GridView
        android:id="@+id/gv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:numColumns="3" />

</LinearLayout>